--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,23 @@
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180.png">
 
+	<script>window.twttr = (function (d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0],
+				t = window.twttr || {};
+			if (d.getElementById(id)) return t;
+			js = d.createElement(s);
+			js.id = id;
+			js.src = "https://platform.twitter.com/widgets.js";
+			fjs.parentNode.insertBefore(js, fjs);
+
+			t._e = [];
+			t.ready = function (f) {
+				t._e.push(f);
+			};
+
+			return t;
+		}(document, "script", "twitter-wjs"));</script>
+
 	<!-- Sapper generates a <style> tag containing critical CSS
   		for the current page. CSS for the rest of the app is
   		lazily loaded when it precaches secondary pages -->
