--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,7 @@
 	%sapper.head%
 </head>
 
-<body class="flex flex-col w-full min-h-screen leading-none">
+<body class="flex flex-col w-full min-h-screen leading-none hero-bg bg-center">
 	<div class="flex flex-col flex-1" id="sapper">
 		%sapper.html%
 	</div>
