--- a/src/template.html
+++ b/src/template.html
@@ -11,8 +11,8 @@
 	<link rel="manifest" href="manifest.json" />
 	<meta name="theme-color" content="#3F83F8">
 
-	<link rel="icon" type="image/png" href="favicon.png" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180.png">
+	<link rel="icon" type="image/png" href="favicon-32x32.png" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
 	<!-- Sapper generates a <style> tag containing critical CSS
   		for the current page. CSS for the rest of the app is
